[package]
name = "moc"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.1.1", features = ["display"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
itertools = "0.14.0"
log = "0.4.29"
ron.workspace = true
cstree.workspace = true
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"

